--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -1,7 +1,7 @@
+@import "tailwindcss/base";
+
 @import "/base.css";
 @import "/about.css";
 
-
-@tailwind "tailwind/base";
-@tailwind "tailwind/components";
-@tailwind "tailwind/utilities";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
