--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,6 +2,17 @@
 title: Welcome to Middleman
 ---
 
-%h1 Middleman is Running
+.flex.bg-white{:style => "height:600px;"}
+  .flex.items-center.text-center.lg:text-left.px-8.md:px-12{class: "lg:w-1/2"}
+    %div
+      %h2.md:text-4xl
+        Build Your New
+        %span.text-indigo-600 Idea
+      %p.md:text-base Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi cum cupiditate ducimus, fugit harum id necessitatibus odio quam quasi, quibusdam rem tempora voluptates. Cumque debitis dignissimos id quam vel!
+      .flex.justify-center.lg:justify-start.mt-6
+        %a.btn{:href => "#"} Get Started
+        %a.btn-secondary{:href => "#"} Learn More
+  .hidden.lg:block{:class => "lg:w-1/2", :style => "clip-path:polygon(10% 0, 100% 0%, 100% 100%, 0 100%)"}
+    .h-full.object-cover{:style => "background-image: url(https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80)"}
+      .h-full.bg-black.opacity-25
 
-= link_to 'About', '/about.html'
