--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -10,5 +10,6 @@
     = stylesheet_link_tag "styles"
     = javascript_include_tag "application"
   %body
-    = partial "main_menu"
+  .w-full
+    = partial "nav"
     = yield
