--- a/source/_nav.haml
+++ b/source/_nav.haml
@@ -9,6 +9,6 @@
             %path.hidden{:d => "M16.24 14.83a1 1 0 0 1-1.41 1.41L12 13.41l-2.83 2.83a1 1 0 0 1-1.41-1.41L10.59 12 7.76 9.17a1 1 0 0 1 1.41-1.41L12 10.59l2.83-2.83a1 1 0 0 1 1.41 1.41L13.41 12l2.83 2.83z"}
             %path{:d => "M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"}
     .flex.flex-col.md:flex-row.hidden.md:block.-mx-2
-      %a.btn-on-hover.:mx-2{:href => "#"} Home
-      %a.btn-on-hover.:mx-2{:href => "#"} About
+      %a.btn-on-hover.:mx-2{:href => "/"} Home
+      %a.btn-on-hover.:mx-2{:href => "/form.html"} The Form
       %a.btn-on-hover.:mx-2{:href => "#"} Contact
