--- a/source/form.html.haml
+++ b/source/form.html.haml
@@ -1,34 +1,34 @@
 ---
 title: The Form
 ---
-%form{netlify: ''}
+%form{name: 'example-form', netlify: ''}
   .bg-white.shadow-md.rounded.px-8.pt-6.pb-8.mb-4.flex.flex-col.my-2
     .-mx-3.md:flex.mb-6
       .px-3.mb-6.md:mb-0{:class => "md:w-1/2"}
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-first-name"}
           First Name
-        %input#grid-first-name.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-red.rounded.py-3.px-4.mb-3{:placeholder => "Jane", :type => "text"}/
+        %input#grid-first-name.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-red.rounded.py-3.px-4.mb-3{:placeholder => "Jane", :type => "text", name: "first_name"}/
         %p.text-red.text-xs.italic Please fill out this field.
       .px-3{:class => "md:w-1/2"}
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-last-name"}
           Last Name
-        %input#grid-last-name.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "Doe", :type => "text"}/
+        %input#grid-last-name.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "Doe", :type => "text", name: 'last_name'}/
     .-mx-3.md:flex.mb-6
       .md:w-full.px-3
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-password"}
           Password
-        %input#grid-password.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4.mb-3{:placeholder => "******************", :type => "password"}/
+        %input#grid-password.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4.mb-3{:placeholder => "******************", :type => "password", name: 'password'}/
         %p.text-grey-dark.text-xs.italic Make it as long and as crazy as you'd like
     .-mx-3.md:flex.mb-2
       .px-3.mb-6.md:mb-0{:class => "md:w-1/2"}
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-city"}
           City
-        %input#grid-city.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "Albuquerque", :type => "text"}/
+        %input#grid-city.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "Albuquerque", :type => "text", name: 'city'}/
       .px-3{:class => "md:w-1/2"}
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-state"}
           State
         .relative
-          %select#grid-state.block.appearance-none.w-full.bg-grey-lighter.border.border-grey-lighter.text-grey-darker.py-3.px-4.pr-8.rounded
+          %select#grid-state.block.appearance-none.w-full.bg-grey-lighter.border.border-grey-lighter.text-grey-darker.py-3.px-4.pr-8.rounded{name: 'state'}
             %option New Mexico
             %option Missouri
             %option Texas
@@ -38,5 +38,5 @@ title: The Form
       .px-3{:class => "md:w-1/2"}
         %label.block.uppercase.tracking-wide.text-grey-darker.text-xs.font-bold.mb-2{:for => "grid-zip"}
           Zip
-        %input#grid-zip.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "90210", :type => "text"}/
+        %input#grid-zip.appearance-none.block.w-full.bg-grey-lighter.text-grey-darker.border.border-grey-lighter.rounded.py-3.px-4{:placeholder => "90210", :type => "text", name: 'zip_code'}/
     %input.btn{type: 'submit'}
